@@ -1,3 +1,8 @@
+2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* serial.c: HPUX compiler fix.
+	* stdlib.c: Add C-defined macro wrappers.
+
 2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* stdio.c: Add wrapper for C99's snprintf(3).
